--- a/pom.xml
+++ b/pom.xml
@@ -72,11 +72,6 @@
         </dependency>
         <dependency>
             <groupId>org.webjars.bower</groupId>
-            <artifactId>adminlte</artifactId>
-            <version>2.3.11</version>
-        </dependency>
-        <dependency>
-            <groupId>org.webjars.bower</groupId>
             <artifactId>datatables</artifactId>
             <version>1.10.19</version>
         </dependency>
@@ -89,6 +84,11 @@
             <groupId>org.webjars.bower</groupId>
             <artifactId>toastr</artifactId>
             <version>2.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>adminlte</artifactId>
+            <version>3.0.0-alpha.2</version>
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
